@@ -12443,6 +12443,8 @@ argument_list|,
 name|results
 argument_list|,
 name|asyncId
+argument_list|,
+name|message
 argument_list|)
 expr_stmt|;
 block|}
@@ -12479,6 +12481,9 @@ name|results
 parameter_list|,
 name|String
 name|asyncId
+parameter_list|,
+name|ZkNodeProps
+name|message
 parameter_list|)
 throws|throws
 name|KeeperException
@@ -13549,28 +13554,6 @@ name|getNodeName
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|params
-operator|=
-operator|new
-name|ModifiableSolrParams
-argument_list|()
-expr_stmt|;
-name|params
-operator|.
-name|set
-argument_list|(
-name|CoreAdminParams
-operator|.
-name|ACTION
-argument_list|,
-name|CoreAdminAction
-operator|.
-name|CREATE
-operator|.
-name|toString
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|String
 name|tempCollectionReplica2
 init|=
@@ -13585,9 +13568,63 @@ argument_list|()
 operator|+
 literal|"_replica2"
 decl_stmt|;
-name|params
+name|props
+operator|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+expr_stmt|;
+name|props
 operator|.
-name|set
+name|put
+argument_list|(
+name|Overseer
+operator|.
+name|QUEUE_OPERATION
+argument_list|,
+name|ADDREPLICA
+operator|.
+name|toLower
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
+name|COLLECTION_PROP
+argument_list|,
+name|tempSourceCollectionName
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
+name|SHARD_ID_PROP
+argument_list|,
+name|tempSourceSlice
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
+literal|"node"
+argument_list|,
+name|targetLeader
+operator|.
+name|getNodeName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
 argument_list|(
 name|CoreAdminParams
 operator|.
@@ -13596,55 +13633,73 @@ argument_list|,
 name|tempCollectionReplica2
 argument_list|)
 expr_stmt|;
-name|params
+comment|// copy over property params:
+for|for
+control|(
+name|String
+name|key
+range|:
+name|message
 operator|.
-name|set
-argument_list|(
-name|CoreAdminParams
-operator|.
-name|COLLECTION
-argument_list|,
-name|tempSourceCollectionName
-argument_list|)
-expr_stmt|;
-name|params
-operator|.
-name|set
-argument_list|(
-name|CoreAdminParams
-operator|.
-name|SHARD
-argument_list|,
-name|tempSourceSlice
-operator|.
-name|getName
+name|keySet
 argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|key
+operator|.
+name|startsWith
+argument_list|(
+name|COLL_PROP_PREFIX
+argument_list|)
+condition|)
+block|{
+name|props
+operator|.
+name|put
+argument_list|(
+name|key
+argument_list|,
+name|message
+operator|.
+name|getStr
+argument_list|(
+name|key
+argument_list|)
 argument_list|)
 expr_stmt|;
-name|setupAsyncRequest
-argument_list|(
+block|}
+block|}
+comment|// add async param
+if|if
+condition|(
 name|asyncId
-argument_list|,
-name|requestMap
-argument_list|,
-name|params
-argument_list|,
-name|targetLeader
+operator|!=
+literal|null
+condition|)
+block|{
+name|props
 operator|.
-name|getNodeName
-argument_list|()
+name|put
+argument_list|(
+name|ASYNC
+argument_list|,
+name|asyncId
 argument_list|)
 expr_stmt|;
-name|sendShardRequest
+block|}
+name|addReplica
 argument_list|(
-name|targetLeader
-operator|.
-name|getNodeName
-argument_list|()
+name|clusterState
 argument_list|,
-name|params
+operator|new
+name|ZkNodeProps
+argument_list|(
+name|props
+argument_list|)
 argument_list|,
-name|shardHandler
+name|results
 argument_list|)
 expr_stmt|;
 name|collectShardResponses
