@@ -531,6 +531,31 @@ argument_list|(
 literal|15
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|usually
+argument_list|()
+condition|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Using legacyCloud=false for cluster"
+argument_list|)
+expr_stmt|;
+name|CollectionsAPIDistributedZkTest
+operator|.
+name|setClusterProp
+argument_list|(
+name|cloudClient
+argument_list|,
+literal|"legacyCloud"
+argument_list|,
+literal|"false"
+argument_list|)
+expr_stmt|;
+block|}
 name|multipleShardMigrateTest
 argument_list|()
 expr_stmt|;
